v1.3.0-25w19a